--- a/PremierStatistics/PremierStatisticsLib/PremierStatisticsLib.csproj
+++ b/PremierStatistics/PremierStatisticsLib/PremierStatisticsLib.csproj
@@ -44,8 +44,9 @@
     <Compile Include="Concrete\DateRange.cs" />
     <Compile Include="Dto\FixtureDto.cs" />
     <Compile Include="Dto\TeamDto.cs" />
-    <Compile Include="IDateRange.cs" />
-    <Compile Include="IPremierStatistics.cs" />
+    <Compile Include="Interfaces\IDateRange.cs" />
+    <Compile Include="Interfaces\ITeam.cs" />
+    <Compile Include="Service\IPremierStatistics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
