--- a/PremierStatistics/PremierStatistics/Web.config
+++ b/PremierStatistics/PremierStatistics/Web.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="FootballStatsEntities" connectionString="metadata=res://*/FoortballStats.csdl|res://*/FoortballStats.ssdl|res://*/FoortballStats.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=FootballStats;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FootballStatsEntities" connectionString="metadata=res://*/FoortballStats.csdl|res://*/FoortballStats.ssdl|res://*/FoortballStats.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=FootballStats;Persist Security Info=True;uid=web1;pwd=Password1;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
