--- a/PremierStatistics/PremierStatistics/Web.config
+++ b/PremierStatistics/PremierStatistics/Web.config
@@ -19,19 +19,36 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <bindings>
+    <basicHttpBinding>
+      <binding name="TransportSecurity">
+        <security mode="Transport">
+          <transport clientCredentialType="None" />
+        </security>
+      </binding>
+    </basicHttpBinding>
+</bindings>     
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="true"/>
-        </behavior>
-      </serviceBehaviors>
+        <behavior name="PremierStatisticsServiceBehavior">
+        <serviceMetadata httpsGetEnabled="true" httpsGetUrl="" />
+        <serviceDebug includeExceptionDetailInFaults="true"/>
+    </behavior>
+  </serviceBehaviors> 
     </behaviors>
-    <protocolMapping>
-        <add binding="basicHttpBinding" scheme="http" />
-    </protocolMapping>    
+    <services>
+    <service name="PremierStatistics.PremierStatistics" behaviorConfiguration="PremierStatisticsServiceBehavior">
+      <endpoint address="" 
+                binding="basicHttpBinding"
+                bindingConfiguration="TransportSecurity" 
+                contract="PremierStatisticsLib.Service.IPremierStatistics" />
+        
+      <endpoint address="mex"
+                binding="mexHttpsBinding"
+                contract="IMetadataExchange" />      
+    </service>
+  </services>
+
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
