--- a/BettorKnow/Web.config
+++ b/BettorKnow/Web.config
@@ -89,11 +89,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IPremierStatistics" />
+        <binding name="BasicHttpBinding_IPremierStatistics">
+          <security mode="Transport" />
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/PremierStatistics/PremierStatistics.svc"
+      <endpoint address="https://localhost:444/PremierStatistics/PremierStatistics.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPremierStatistics"
         contract="PremierStatisticsService.IPremierStatistics" name="BasicHttpBinding_IPremierStatistics" />
     </client>
