--- a/PremierStatistics/packages/repositories.config
+++ b/PremierStatistics/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\PremierStatistics\packages.config" />
   <repository path="..\PremierStatisticsDal.Tests\packages.config" />
   <repository path="..\PremierStatisticsDal\packages.config" />
+  <repository path="..\SplunkReadyFormatter\packages.config" />
 </repositories>
